--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <!-- This information will be displayed in ModTheSpire, the modded launcher. -->
     <name>Custom Deck + Spire Cafe Compatibility Patch</name>
-    <version>0.0.0</version>
+    <version>0.0.2</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
     <description>Because starting with a custom deck and relics wasn't op enough already.</description>
@@ -174,6 +174,7 @@
                                 <!--This puts a copy of your mod's jar file into the SlayTheSpire mods folder so it will be loaded.-->
                                 <!--On mac, it will be copied to another location. See further below.-->
                                 <copy file="target/customcafepatchmod.jar" tofile="${steam.path}/common/SlayTheSpire/customcafepatchmod/content/customcafepatchmod.jar"/>
+                                <copy file="target/customcafepatchmod.jar" tofile="${steam.path}/common/SlayTheSpire/mods/customcafepatchmod.jar"/>
                                 <copy file="target/customcafepatchmod.jar" tofile="${steam.path}/workshop/content/646570/3548044797/customcafepatchmod.jar"/>
                             </target>
                         </configuration>
@@ -256,6 +257,7 @@
                                     <target>
                                         <!-- This moves your mod into a common folder where all mods you make can go. -->
                                         <copy file="target/customcafepatchmod.jar" tofile="${steam.path}/common/SlayTheSpire/customcafepatchmod/content/customcafepatchmod.jar"/>
+                                        <copy file="target/customcafepatchmod.jar" tofile="${steam.path}/common/SlayTheSpire/mods/customcafepatchmod.jar"/>
                                         <copy file="target/customcafepatchmod.jar" tofile="${steam.path}/workshop/content/646570/3548044797/customcafepatchmod.jar"/>
                                     </target>
                                 </configuration>
