--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
 
     <!-- This information will be displayed in ModTheSpire, the modded launcher. -->
     <name>Everything Patch Mod</name>
-    <version>0.3.5</version>
+    <version>0.3.6</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
-    <description>If there's a mod that I've used and it has a bug? It's been fixed by this.</description>
+    <description>If there's a mod that I've used, and it has a bug? It's been fixed by this.</description>
 
     <!--You shouldn't need to change anything below this point, but feel free to look at it.-->
     <!--You'll get a warning regarding these when you package your mod, but don't worry, it's just set up like this for convenience.-->
